--- a/cmh/webapp/web/index.html
+++ b/cmh/webapp/web/index.html
@@ -184,7 +184,7 @@
         <div class="well">
             <div class="row">
                 <div class="col-md-8">
-                    <p>¿Quiéres acceder a alguno de nuestros servicios online? Inicia sesión</p>
+                    <p>¿Quieres acceder a alguno de nuestros servicios online? Inicia sesión</p>
                 </div>
                 <div class="col-md-4">
                     <a class="btn btn-lg btn-default btn-block" href="#">Iniciar sesión</a>
